2015-04-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Link against libssh since base uses it.

2015-04-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* libopenvas_base.pc.in, libopenvas_misc.pc.in, libopenvas_omp.pc.in,
	libopenvas_nasl.pc.in: Move dependencies from "Requires" to
	"Requires.private" to prevent overlinking when libopenvas_* is linked
	against. Update minimum versions to match CMakeLists.txt and INSTALL.

2015-04-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_shell_open, nasl_ssh_shell_write): Improve
	error messages.

2015-04-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_text_utils.c (nasl_egrep): Allocate extra byte as a \n is
	appended when regex matches.

2015-04-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Retrieve SNMP_LDFLAGS only when the libsnmp
	development libraries were found as net-snmp-config may be present
	without them.

2015-04-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Revert r22092 as nasl_perror() could be called before nvticache
	initialization.

	* nasl/exec.c (exec_nasl_script): Don't set script name in script_infos
	arglist.

	* nasl/nasl_debug.c (nasl_perror): Get script name from nvticache.

	* base/nvticache.c (nvticache_get_src): Add null check.

2015-04-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_create_task_ext): Check and insert correct id for
	schedules.

2015-04-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (osp_start_scan): Take result pointer as function argument.
	Return int for success or failure.

	* base/osp.h: Adjust function prototype.

2015-04-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Don't set script name in script_infos
	arglist.

	* nasl/nasl_debug.c (nasl_perror): Get script name from nvticache.

2015-04-09  Hani Benhabiles <hani.benhabiles@greenbone.net>
