@@ -1,3 +1,8 @@
+2015-04-27  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_ssh.c (nasl_ssh_shell_open): Free ssh channel after closing
+	it.
+
 2015-04-27  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* base/CMakeLists.txt: Link against libssh since base uses it.
